@@ -5,6 +5,7 @@
     "rpo.lavidacraft.blocks.bedrock": "Bedrock",
     "rpo.lavidacraft.blocks.chiseledStoneBricks": "Chiseled Stone Bricks",
     "rpo.lavidacraft.blocks.chorus": "Chorus Flowers",
+    "rpo.lavidacraft.blocks.dragonEgg": "Dragon Egg",
     "rpo.lavidacraft.blocks.kelp": "Dried Kelp Blocks",
     "rpo.lavidacraft.blocks.glowstone": "Glowstone",
     "rpo.lavidacraft.blocks.glowstone.tooltip": "Custom textures for glowstone and glowstone dust",
