@@ -1,0 +1,6 @@
+{
+  "textures": {
+    "particle": "minecraft:block/conduit"
+  },
+  "gui_light": "front"
+}
