@@ -1,0 +1,7 @@
+{
+  "parent": "minecraft:block/cube_all",
+  "textures": {
+    "all": "minecraft:block/crying_obsidian"
+  },
+  "gui_light": "front"
+}
