@@ -1,0 +1,22 @@
+{   "parent": "block/block",
+    "textures": {
+        "particle": "block/enchanting_table_bottom",
+        "bottom": "block/enchanting_table_bottom",
+        "top": "block/enchanting_table_top",
+        "side": "block/enchanting_table_side"
+    },
+    "elements": [
+        {   "from": [ 0, 0, 0 ],
+            "to": [ 16, 12, 16 ],
+            "faces": {
+                "down":  { "uv": [ 0, 0, 16, 16 ], "texture": "#bottom", "cullface": "down" },
+                "up":    { "uv": [ 0, 0, 16, 16 ], "texture": "#top" },
+                "north": { "uv": [ 0, 4, 16, 16 ], "texture": "#side", "cullface": "north" },
+                "south": { "uv": [ 0, 4, 16, 16 ], "texture": "#side", "cullface": "south" },
+                "west":  { "uv": [ 0, 4, 16, 16 ], "texture": "#side", "cullface": "west" },
+                "east":  { "uv": [ 0, 4, 16, 16 ], "texture": "#side", "cullface": "east" }
+            }
+        }
+    ],
+    "gui_light": "front"
+}
