@@ -1,0 +1,44 @@
+{   "parent": "block/block",
+    "display": {
+        "head": {
+            "rotation": [ -60, 0, 0 ],
+            "translation": [ 0, 5, -9],
+            "scale":[ 1, 1, 1]
+        },
+        "thirdperson_righthand": {
+            "rotation": [ 0, 0, 0 ],
+            "translation": [ 0, 0, 0],
+            "scale": [ 0.375, 0.375, 0.375 ]
+        }
+    },
+    "textures": {
+        "end_rod": "block/end_rod",
+        "particle": "block/end_rod"
+    },
+    "elements": [
+        {
+            "from": [ 6, 0, 6 ],
+            "to": [ 10, 1, 10 ],
+            "faces": {
+                "down":  { "uv": [ 6, 6, 2, 2 ], "texture": "#end_rod", "cullface": "down" },
+                "up":    { "uv": [ 2, 2, 6, 6 ], "texture": "#end_rod" },
+                "north": { "uv": [ 2, 6, 6, 7 ], "texture": "#end_rod" },
+                "south": { "uv": [ 2, 6, 6, 7 ], "texture": "#end_rod" },
+                "west":  { "uv": [ 2, 6, 6, 7 ], "texture": "#end_rod" },
+                "east":  { "uv": [ 2, 6, 6, 7 ], "texture": "#end_rod" }
+            }
+        },
+        {
+            "from": [ 7, 1, 7 ],
+            "to": [ 9, 16, 9 ],
+            "faces": {
+                "up":    { "uv": [ 2, 0, 4, 2 ], "texture": "#end_rod", "cullface": "up" },
+                "north": { "uv": [ 0, 0, 2, 15 ], "texture": "#end_rod" },
+                "south": { "uv": [ 0, 0, 2, 15 ], "texture": "#end_rod" },
+                "west":  { "uv": [ 0, 0, 2, 15 ], "texture": "#end_rod" },
+                "east":  { "uv": [ 0, 0, 2, 15 ], "texture": "#end_rod" }
+            }
+        }
+    ],
+    "gui_light": "front"
+}
