@@ -1,0 +1,7 @@
+{
+	"parent": "minecraft:block/cube_all",
+	"textures": {
+		"all": "block/glowstone"
+	},
+	"gui_light": "front"
+}
