@@ -1,4 +1,5 @@
 {
+	"credit": "Made with Blockbench",
 	"ambientocclusion": false,
 	"textures": {
 		"1": "lavidacraft:block/potted_cactus_side",
@@ -42,7 +43,7 @@
 			"to": [10, 16, 10],
 			"rotation": {"angle": 0, "axis": "y", "origin": [6, 16, 6]},
 			"faces": {
-				"up": {"uv": [6, 6, 10, 10], "texture": "#2"}
+				"up": {"uv": [6, 6, 10, 10], "texture": "#2", "cullface": "up"}
 			}
 		}
 	]
