@@ -1,0 +1,8 @@
+{
+  "parent": "minecraft:block/cube_column",
+  "textures": {
+    "end": "minecraft:block/verdant_froglight_top",
+    "side": "minecraft:block/verdant_froglight_side"
+  },
+  "gui_light": "front"
+}
