@@ -7,6 +7,7 @@
             bedrock: true,
             chiseledStoneBricks: true,
             chorus: true,
+            dragonEgg: true,
             driedKelp: true,
             glowstone: true,
             grasslikeSides: true,
